--- a/style/style.css
+++ b/style/style.css
@@ -187,9 +187,9 @@ main {
 }
 
 .cart-details {
-  height: 30%;
+  height: 20%;
   width: 100%;
-  background-color: #333333;
+  background-color: rgb(28, 78, 28);
   padding: 15px;
   box-sizing: border-box;
   display: flex;
@@ -269,13 +269,22 @@ main {
 .productButton {
   font-family: Inter, sans-serif;
   font-weight: bold;
-  font-size: 12px;
+  font-size: 14px;
   display: flex;
   background-color: white;
   border: #ffffff;
+  padding: 0;
 }
 
 .productButton:hover {
   font-weight: bold;
   color: rgb(28, 78, 28);
+}
+
+.cartNameItem {
+  font-weight: bold;
+}
+
+.cartValue {
+  font-weight: bold;
 }
